blue-green/blue-green-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen-demo
  labels:
    app: bluegreen-demo
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: bluegreen-demo
  template:
    metadata:
      labels:
        app: bluegreen-demo
    spec:
      containers:
      - name: bluegreen-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    blueGreen:
      autoPromotionEnabled: true
      activeService: bluegreen-demo
      previewService: bluegreen-demo-preview
      autoPromotionSeconds: 30
      prePromotionAnalysis: {}  # Define pre-promotion analysis here
      postPromotionAnalysis: {}  # Define post-promotion analysis here
      previewReplicaCount: 1  # Define number of preview replicas
      scaleDownDelaySeconds: 60  # Define scale down delay in seconds
      scaleDownDelayRevisionLimit: 1  # Define scale down delay revision limit
